# hermes-super-agent

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ECOSYSTEM-PLAYBOOK.md  ETHOS.md  INSTALL.md  LAUNCH.md  LICENSE  MIGRATION-MAP.md  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  SOUL-saiyan.md  SOUL.md  STORY.md  SUPER-AGENT.md  install.py  package.json  pnpm-workspace.yaml  pyproject.toml  railway.json
.claude/: mcp.json
.claude/agents/: orchestrator.md
.github/workflows/: ci.yml  nightly-upgrade.yml
agent-os/standards/: documentation-habit.md  index.yml  super-agent-operating-model.md
config/memories/: MEMORY.md  USER.md
decisions/: 0001-local-agent-stack.md
deploy/archon/: Dockerfile  README.md  railway.json  wrapper.py
deploy/compose/: README.md  docker-compose.kaioken.yml  docker-compose.yml
deploy/coordinator/: .env.example  Dockerfile  README.md  pyproject.toml  railway.json
deploy/coordinator/src/coordinator/: __init__.py  llm.py  main.py  nats_pub.py  tasks.py
deploy/coordinator/tests/: test_llm_routing.py  test_smoke.py
deploy/docker/: Dockerfile  README.md  compose.yml
deploy/fly/: README.md  fly.toml
deploy/nats/: Dockerfile  railway.json
deploy/railway/: README.md  railway.json
deploy/temporal/: Dockerfile  railway.json
docs/: EXECUTION-PLAN.md  SUPERAGENT_STACK.md  architecture.md  builder-swarm-harness.md  builder-tool-architecture.md  cloud-computer-options.md  commercial-packaging.md  coo-single-brain-rebuild.md  cursor-sdk-intake.md  deployment-health-specialist.md  deployments-inventory.md  hermes-first-install-walkthrough.md  inventory.md  modes.md  portfolio-agent-architecture.md  portfolio-roadmap.md  private-bootstrap-overlay.md  roadmap.md  routing-intelligence-contract.md  setup-backlog.md  setup-log.md  specialist-agent-operations.md  steipete-tool-intake.md  super-agent-runtime.md  symphony-intake.md  tool-awareness-handoff.md  tool-cheatsheet.md  update-policy.md  vault-sync-contract.md  working-with-this-repo.md
examples/: kaioken_spawn_demo.py  saiyan_hello.py
examples/content-engine/: README.md  manifest.yaml
examples/coo-control-room/: README.md  manifest.yaml
examples/sdr-fleet/: README.md  manifest.yaml
examples/skool-group-manager/: README.md  config.ai-integrators.yaml  config.template.yaml  manifest.yaml
runbooks/: a0-connector.md  agent-zero.md  codex.md  deployment-access.md  hermes.md
scripts/: bootstrap.sh  deploy.sh  health-check.sh  install-agent-os-to-project.sh  kaioken-down.sh  kaioken-up.sh  launch.py  log.sh  orchestrator-bench.py  publish.sh  refresh-graph.sh  run-upgrader-once.sh  safety-scan.sh  setup.sh  start.sh
src/: manifest.yaml
src/agent_os/: __init__.py  cli.py
templates/: AGENT.md.j2  WORKFLOW.md  bootstrap.sh.j2  project-registry.md
tests/integration/: test_single_state_smoke.py
tests/smoke/: test_imports.py
tests/unit/: test_catalog.py  test_composio.py  test_fabric_runtimes.py  test_job_router.py  test_launch_wizard.py  test_loop_20_codex_fixes.py  test_loop_21_lanes.py  test_loops_17_to_19.py  test_loops_7_to_16.py  test_manifest.py  test_model_planner.py  test_openswarm_builder.py  test_openswarm_ops.py  test_openswarm_runtime.py  test_plan_card.py  test_plan_overrides.py  test_telegram_bot.py  test_tier_classifier.py  test_tool_planner.py
vault/decisions/: 0001-super-agent-is-agent-os-plus-local-runtimes.md  (+2 more)
(+215 files in other folders)
