[project]
name = "super-agent"
version = "0.1.0"
description = "Agent OS plus Hermes, Codex, Agent Zero, A0, and local autonomous-agent operations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Justin Bell", email = "justin@usingaitoscale.com" }]

dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    # Fabric — A2A server
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # Fabric — NATS JetStream bus
    "nats-py>=2.7",
    # Fabric — Temporal durable workflows
    "temporalio>=1.7",
    # Fabric — Jinja2 templates (AGENT.md.j2, bootstrap.sh.j2)
    "jinja2>=3.1",
    # Fabric — SSH bootstrap for VPS superagent provisioning
    "paramiko>=3.4",
    # Fabric — AgentOps observability
    "agentops>=0.3",
    # Kaioken — Docker SDK for local_spawn runtime (sibling container spawning)
    "docker>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
agent-os = "agent_os.cli:main"
super-agent = "agent_os.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_os"]
