[project]
name = "hermes-coordinator"
version = "0.1.0"
description = "A2A-compliant fan-out coordinator for the Hermes fleet — runs N parallel sub-agents on any LLM."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "anthropic>=0.39",
    "openai>=1.54",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
nats = ["nats-py>=2.7"]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
hermes-coordinator = "coordinator.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coordinator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
